--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Jiwon Baik</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -303,17 +303,26 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Jiwon Baik</h1>
 
 </div>
 
 
-<center>
-<div id="hi-im-jiwon-baik." class="section level1">
-<h1>Hi, I’m Jiwon Baik.</h1>
-<img src="img/download.jpg" title="fig:" alt="downloaded image" />
-</center>
-<p><a href="https://www.lipsum.com/">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<ul>
+<li>BA, geography education, Seoul Nation University <strong>(2019)</strong></li>
+<li>MA, geography, University of California, Santa Barbara <strong>(2021)</strong><br />
+</li>
+</ul>
+</div>
+<div id="work" class="section level2">
+<h2>work</h2>
+<ul>
+<li>intern, Leaders Business Consulting Company, Seoul <strong>(2017)</strong></li>
+<li>intern, Public Policy Boradcasting Service, Korea TV <strong>(2018)</strong></li>
+<li>Samsung Software Academy, Seoul <strong>(2019)</strong></li>
+</ul>
 </div>
 
 
