--- a/geog176A.html
+++ b/geog176A.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/simplex.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -103,33 +103,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 41px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 46px;
+  margin-top: -46px;
 }
 .dropdown-submenu {
   position: relative;
@@ -282,11 +282,14 @@ $(document).ready(function () {
 <li>
   <a href="geog176A.html">GIS Work</a>
 </li>
+<li>
+  <a href="cv.html">CV</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/mikejohnson51/geog176A">
-    <span class="fa fa-github"></span>
+  <a href="https://github.com/JiwonBaik96">
+    <span class="fa fa-rocket"></span>
      
   </a>
 </li>
@@ -306,7 +309,7 @@ $(document).ready(function () {
 
 <p>In the summer of 2020 I took a class GIS course based in R. I worte some code, and did some cool data science. Here is a collection of links!</p>
 <div id="building-a-project-website" class="section level2">
-<h2><a href="">Building a project website</a></h2>
+<h2><a href="https://github.com/JiwonBaik96/jay.github.io">Building a project website</a></h2>
 <ul>
 <li>In this assignment we built a static users site with Github Pages</li>
 <li>Includes a github repo for access to all the code.</li>
