projects added, in progress

--- a/portfolio.html
+++ b/portfolio.html
@@ -281,10 +281,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="geog176A.html">Portfolio</a>
+  <a href="portfolio.html">Portfolio</a>
 </li>
 <li>
-  <a href="data/Resume_JiwonBaik.pdf">Resume</a>
+  <a href="teaching.html">GIS Teaching</a>
+</li>
+<li>
+  <a href="data/Resume_JiwonBaik.html">Resume</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
@@ -311,14 +314,48 @@ $(document).ready(function () {
 </div>
 
 
-<p>In the summer of 2020 I took a class GIS course based in R. I worte some code, and did some cool data science. Here is a collection of links!</p>
-<div id="building-a-project-website" class="section level2">
-<h2><a href="https://github.com/JiwonBaik96/jay.github.io">Building a project website</a></h2>
+<div id="d-acoustic-propagation-modeling" class="section level2">
+<h2>3d Acoustic Propagation Modeling</h2>
 <ul>
-<li>In this assignment we built a static users site with Github Pages</li>
-<li>Includes a github repo for access to all the code.</li>
-<li>Look at how high quality my work is!</li>
+<li><a href="data/Sound_Propagation_Model.pdf">presentation</a></li>
 </ul>
+</div>
+<div id="location-based-theater-and-movie-finder" class="section level2">
+<h2>Location based Theater and Movie finder</h2>
+</div>
+<div id="fire-evacuation-maps" class="section level2">
+<h2>Fire Evacuation Maps</h2>
+<p><img src="data/1_staggered.gif" /><!-- --></p>
+</div>
+<div id="interactive-map-of-pareto-optimal-solutions" class="section level2">
+<h2>Interactive map of Pareto Optimal solutions</h2>
+</div>
+<div id="geographic-weighted-regression-of-aods-using-remote-sense-data" class="section level2">
+<h2>Geographic Weighted Regression of AODs using Remote Sense Data</h2>
+<ul>
+<li><a href="data/GWR_Spline.pdf">report</a></li>
+</ul>
+</div>
+<div id="election-data-analysis" class="section level2">
+<h2>2016 Election data analysis</h2>
+<ul>
+<li><a href="data/2016ElectionCodes.html">sourcecode</a></li>
+<li><a href="data/2016ElectionReport.pdf">report</a></li>
+</ul>
+</div>
+<div id="finding-optimal-locations-of-street-lights-in-la" class="section level2">
+<h2>Finding Optimal Locations of Street Lights in LA</h2>
+<ul>
+<li><a href="data/StreetLightAllocation.html">sourcecode</a></li>
+</ul>
+<center>
+<video width="480" height="320" controls>
+<source src="data/StreetLightAllocation.mp4" type="video/mp4">
+</video>
+</center>
+</div>
+<div id="time-series-analysis" class="section level2">
+<h2>Time Series Analysis</h2>
 </div>
 
 
