--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ $(document).ready(function () {
   <a href="portfolio.html">Portfolio</a>
 </li>
 <li>
-  <a href="teaching.html">Teaching</a>
+  <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
   <a href="data/Resume_JiwonBaik.pdf">Resume</a>
