--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Geo13_2021_Labs</title>
+<title>teaching.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -287,7 +287,7 @@ $(document).ready(function () {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="data/Resume_JiwonBaik.pdf">Resume</a>
+  <a href="data/Resume_JiwonBaik.html">Resume</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
@@ -309,21 +309,23 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Geo13_2021_Labs</h1>
 
 </div>
 
 
-<p>In the summer of 2021, I TAed for the class leading students to make the first project in the GIS programming class using R. Here is a collection of links!</p>
-<div id="geog13_2021" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/index.html">Geog13_2021</a></h1>
+<div id="geog13_2021-and-geog-176a-2020" class="section level1">
+<h1>Geog13_2021 and GEOG 176A 2020</h1>
+<div id="instructor-mike-johnson-ta-jiwon-baik" class="section level4">
+<h4>instructor: Mike Johnson, TA: Jiwon Baik</h4>
 <ul>
+<li>TAed for the class leading students to make the first project in the GIS programming class using R.</li>
 <li>Students to be familiar with R and Rstudio: what the basic logic is, and how to use it.</li>
 <li>create a brief personal website using R and Github, that everyone visits it online easily.</li>
 <li>Make a good start on Geographic Information Science!</li>
 </ul>
 <hr />
 <p>In the <strong>lab02</strong>, I worked with COVID-19 data in US, monitoring California’s daily new cases, plotting 4 interesting states’ changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.</p>
+</div>
 </div>
 <div id="covid-19-data-wrangling" class="section level1">
 <h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-02.html">COVID-19 Data Wrangling</a></h1>
@@ -368,17 +370,6 @@ $(document).ready(function () {
 <p>Here is my highlight in the project: <img src="img/geo13-lab05highlight.png" /></p>
 <hr />
 <p>In the <strong>lab06</strong>, terrain analysis is managed by R coding. We chose Mission Creek’s flood event in 2017 as object, estimating the number of buildings impacted. In the project, I completed the whole analysis from collecting data to the assessment of impacts.</p>
-</div>
-<div id="flood-risk-in-mission-creek-past-present-future" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-06.html">Flood Risk in Mission Creek: Past, Present, Future</a></h1>
-<ul>
-<li>I use OSM data to collect building centroids and the stream linestring.</li>
-<li>with the whitebox, I create hillshade raster of Santa Barbara area and HAND raster for flooding cell values.</li>
-<li>The correcting of elevation is important in the data, which will impact the precision of analysis.</li>
-<li>In the final step, I overlay all raster layers into one, indicating the impacted buildings when the creek flooded.</li>
-<li>I also create a gif for Mission Creek’s flood inundation map library from 0 to 20 foot.</li>
-</ul>
-<p>Here is my highlight in the project: <img src="img/geo13-lab06highlight.png" /></p>
 </div>
 
 
