--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ $(document).ready(function () {
 </ul>
 <p>I am proficient in Python, and R.</p>
 <p>I’ve done 3D spatial modeling,</p>
-<p>In the <a href="https://JiwonBaik96.github.io/portfolio.html">Portfolio</a> page, you could read details and source codes of my projects.</p>
+<p>In the <a href="https://jiwonbaik96.github.io/portfolio.html">Portfolio</a> page, you could read details and source codes of my projects.</p>
 <ul>
 <li>Teaching</li>
 </ul>
@@ -315,7 +315,7 @@ $(document).ready(function () {
 </ul>
 <p>I enjoy surfing, poker and baking.</p>
 <p>if you want to know personal me, you can visit my instagram.</p>
-<p>instagram: <span class="citation">@miracle_jay0____0</span> (<a href="https://www.instagram.com/miracle_jay0____0" class="uri">https://www.instagram.com/miracle_jay0____0</a>)</p>
+<p>instagram: <span class="citation">[@miracle_jay0____0]</span>(<a href="https://www.instagram.com/miracle_jay0____0" class="uri">https://www.instagram.com/miracle_jay0____0</a>)</p>
 <hr />
 </div>
 
