--- a/teaching.html
+++ b/teaching.html
@@ -359,31 +359,13 @@ div.tocify {
 </div>
 
 
-<style type="text/css">
-.spoiler {
-  visibility: hidden;
-}
-
-.spoiler::before {
-  visibility: visible;
-  content: "Spoiler alert! Hover me to see the answer."
-}
-
-.spoiler:hover {
-  visibility: visible;
-}
-
-.spoiler:hover::before {
-  display: none;
-}
-</style>
 <hr />
 <center>
 </center>
 <div id="geog13-2021-and-geog-176a-2020" class="section level2">
 <h2>Geog13 2021 and GEOG 176A 2020</h2>
 <div id="instructor-mike-johnson" class="section level4">
-<h4>instructor: Mike Johnson</h4>
+<h4>Instructor: Mike Johnson</h4>
 </div>
 <div id="ta-jiwon-baik" class="section level4">
 <h4>TA: Jiwon Baik</h4>
@@ -394,39 +376,66 @@ div.tocify {
 <li>Make a good start on Geographic Information Science!</li>
 </ul>
 <hr />
-<p>In the <strong>lab02</strong>, I worked with COVID-19 data in US, monitoring California’s daily new cases, plotting 4 interesting states’ changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.</p>
 </div>
 </div>
 <div id="covid-19-data-wrangling" class="section level2">
-<h2>COVID-19 Data Wrangling</h2>
+<h2>1. COVID-19 Data Wrangling</h2>
 <ul>
-<li>I was familiar with Rstudio gradually from practices, for instance, analyzing raw data with packages and plotting, combination of raw data, and extracting the variables from raw data.</li>
-<li>In the COVID-19 data wrangling, I started to realize the relationship among data. Data will be influenced by other variables, chronologically and spatially.</li>
-<li>The structure of the code is important too. Well-structured code is easier to debug and present.</li>
+<li><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-02.html" target="_blank">sourcecode</a></li>
 </ul>
-<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-02.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab02highlight.png" /></a></p>
+<div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>COVID-19 Data Wrangling</b>
+</p>
+<p style="margin-left:1em;">
+<p>In the <strong>lab02</strong>, I worked with COVID-19 data in US, monitoring California’s daily new cases, plotting 4 interesting states’ changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.</p>
+<p><br></p>
+<ul>
+<li>Students got familiar with Rstudio gradually from practices, for instance, analyzing raw data with packages and plotting, combination of raw data, and extracting the variables from raw data.</li>
+<li>Students used New York Times COVID-19 Data and USDA Population Data to analyze cases of the virus across U.S. counties, working primarily with daily new cases, total case counts, state rolling 7-day mean cases, and cases per capita.</li>
+<li>Students wrote programmatic requests to enable the data to update with daily additions made to the url of supporting COVID-19 data.</li>
+<li>Students mapped the migration of the weighted mean coordinate locations of COVID-19 cases through time, scaling the mean center points with nationwide cumulative cases in relation to the current case counts.</li>
+</ul>
+</p>
+<p></span></p>
+</div>
+<p><img src="img/weightedmeancenter.png" />]</p>
 <hr />
-<p>In the <strong>lab03</strong>, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in <a href="https://www.aclu.org/other/constitution-100-mile-border-zone" target="_blank">ACLU article</a>.</p>
 </div>
 <div id="distances-and-the-border-zone" class="section level2">
-<h2>Distances and the Border Zone</h2>
+<h2>2. Distances and the Border Zone</h2>
 <ul>
-<li>I learned how to build sf objects from R packages and CSVs, using computer to program the projection which studied in the Geog w12.</li>
-<li>In the project, I understand the calculation of distance between geographic objects, such as point, line string and area.</li>
-<li>And I can plot clear map with distance data by ggplot.</li>
+<li><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-03.html" target="_blank">sourcecode</a></li>
 </ul>
-<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-03.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab03highlight.png" /></a></p>
+<div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>Distances and the Border Zone</b>
+</p>
+<p style="margin-left:1em;">
+<p>In the <strong>lab03</strong>, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in <a href="https://www.aclu.org/other/constitution-100-mile-border-zone" target="_blank">ACLU article</a>.</p>
+<p><br></p>
+<ul>
+<li>Students worked with spatial (sf) objects and coordinate systems and converted from MULTIPOLYGON to MULTILINESTRING geometries, in order to visualize country and state borders.</li>
+<li>Students wrote functions to hasten coding that involved repeated use of the same code.</li>
+<li>Students learned to use gghighlight to show only the pertaining data in color and lty to create dashed boundaries.</li>
+</ul>
+</p>
+<p></span></p>
+</div>
+<p>Here is my highlight in the project: <img src="img/10popborderzone.png" /></p>
 <hr />
 <p>In the <strong>lab04</strong>, I started to analyze the geographic points in the polygon, with the functions defined by myself. With the raw data of dams in the United States, I tried to find the relationship between the dam distribution and geographic information.</p>
 </div>
 <div id="tesselations-point-in-polygon" class="section level2">
 <h2>Tesselations, Point-in-Polygon</h2>
 <ul>
-<li>I understand how the tessellation works. Each tessellation has its own advantages and disadvantages, and different attributes.</li>
-<li>I analyze the dams data in the United States with the voronoi tessellation, defining the numbers of dam in each tiles. With the distribution of different types, I demonstrate the possible reasons of the distribution.</li>
-<li>And the leaflet map also be drawn, showing in largest and high_hazard dam in each state with Mississippi River System.</li>
+<li>Students created tessellated surfaces of US county centroids and grid coverages intersected to the boundaries of the contiguous United States.</li>
+<li>Using data from the US Army Corp of Engineers’ National Dam Inventory (NID), Students mapped the spatial distribution of dams in the tessellations, noting that tile size can be deceptive (see: <a href="https://www.gislounge.com/modifiable-areal-unit-problem-gis/">The Modifiable Areal Unit Problem (MAUP)</a>)</li>
+<li>Students created point-in-polygon visualizations for dams of specific purposes, such as recreation and flood control.</li>
 </ul>
-<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-04.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab04highlight.png" /></a></p>
+<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-04.html" target="_blank" title="click this image to open sourcecode"><img src="img/Lab4FloodControl.png" /></a></p>
 <hr />
 <p>In the <strong>lab05</strong>, we learned to use raster layers to analyze the continuous data, a case of flooding in Palo, Iowa. We used the raster pacakge and raster data knowledge to create flood images using multiband Landsat Imagery, thresholding and classification methods.</p>
 </div>
@@ -437,7 +446,7 @@ div.tocify {
 <li>In the case of Palo, I use kmean-rasters compared with Landsat band calculating the flooding cells shared by each layers.</li>
 <li>And I extracted a specific location captured by the drone from layers to define its value in the raster data.</li>
 </ul>
-<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-05.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab05highlight.png" /></a></p>
+<p>Here is my highlight in the project: <img src="img/mission-creek-fim.gif" /><!-- --></p>
 <hr />
 <p>In the <strong>lab06</strong>, terrain analysis is managed by R coding. We chose Mission Creek’s flood event in 2017 as object, estimating the number of buildings impacted. In the project, I completed the whole analysis from collecting data to the assessment of impacts.</p>
 </div>
