--- a/portfolio.html
+++ b/portfolio.html
@@ -391,6 +391,8 @@ div.tocify {
 <hr />
 <div id="d-acoustic-propagation-modeling" class="section level3">
 <h3>1.1. 3d Acoustic Propagation Modeling</h3>
+<div id="ongoing" class="section level4">
+<h4>[Ongoing]</h4>
 <ul>
 <li><a href="data/Sound_Propagation_Model.pdf">presentation</a></li>
 <li><a href="data/SoundPropagation.html">sourcecode</a> : The sourcecode relies on arcpy module. The ipynb file should be operated within ArcGIS Pro, as an inserted Notebook.</li>
@@ -398,10 +400,10 @@ div.tocify {
 <div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
 <span>
 <p style="margin-top:1em; text-align:center">
-<b>On the importance of sentence length</b>
+<b>3d Acoustic Propagation Modeling</b>
 </p>
 <p style="margin-left:1em;">
-This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+<p>This project is to</p>
 </p>
 <p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
 <b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
@@ -427,6 +429,7 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 </div>
 </center>
 <hr />
+</div>
 </div>
 <div id="extracting-indoor-details-from-lidar-pointcloud" class="section level3">
 <h3>1.2. Extracting Indoor Details from LIDAR pointcloud</h3>
@@ -495,7 +498,10 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 </div>
 <div id="python-visualization-and-spatial-optimization" class="section level2">
 <h2>3. Python Visualization and Spatial Optimization</h2>
+<div id="ongoing-1" class="section level4">
+<h4>[Ongoing]</h4>
 <hr />
+</div>
 <div id="fire-evacuation-maps" class="section level3">
 <h3>3.1. Fire Evacuation Maps</h3>
 <ul>
