--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@ $(document).ready(function () {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -286,7 +286,7 @@ $(document).ready(function () {
 <center>
 <div id="hi-im-jiwon-baik." class="section level1">
 <h1>Hi, I’m Jiwon Baik.</h1>
-<p><img src="img/profile.jpg" /></p>
+<p><img src="img/profile.png" /></p>
 <hr />
 <p>Hi, my name is Jiwon Baik.</p>
 <p>Thank you for visiting my portfolio webpage :)</p>
@@ -310,6 +310,7 @@ $(document).ready(function () {
 <p>My undergrad major was Geography and Education.</p>
 <p>I taught GIS (Geographic Information Science) using ArcGIS Pro and R.</p>
 <p>I’m the best evaluated TA in the Geography department, and having national teacher’s license in Korea.</p>
+<p>In the <a href="https://jiwonbaik96.github.io/teaching.html">GIS Teaching</a> page, you could read details and source codes of the labs I taught.</p>
 <ul>
 <li>Hobbies</li>
 </ul>
