--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
 
 
-<title>resume.knit</title>
+<title>Resume</title>
 
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -256,10 +256,10 @@ $(document).ready(function () {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -278,6 +278,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
