--- a/teaching.html
+++ b/teaching.html
@@ -332,10 +332,10 @@ div.tocify {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -432,7 +432,7 @@ div.tocify {
 <hr />
 </div>
 <div id="tesselations-point-in-polygon" class="section level2">
-<h2>Tesselations, Point-in-Polygon</h2>
+<h2>3. Tesselations, Point-in-Polygon</h2>
 <ul>
 <li><a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-04.html" target="_blank">sourcecode</a></li>
 </ul>
