portfolio adding explanations;

--- a/teaching.html
+++ b/teaching.html
@@ -381,7 +381,7 @@ div.tocify {
 <div id="covid-19-data-wrangling" class="section level2">
 <h2>1. COVID-19 Data Wrangling</h2>
 <ul>
-<li><a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-02.html" target="_blank">sourcecode</a></li>
+<li><i class="fas fa-desktop"></i> <a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-02.html" target="_blank">sourcecode</a></li>
 </ul>
 <div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
 <span>
@@ -408,7 +408,7 @@ div.tocify {
 <div id="distances-and-the-border-zone" class="section level2">
 <h2>2. Distances and the Border Zone</h2>
 <ul>
-<li><a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-03.html" target="_blank">sourcecode</a></li>
+<li><i class="fas fa-desktop"></i> <a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-03.html" target="_blank">sourcecode</a></li>
 </ul>
 <div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
 <span>
@@ -434,7 +434,7 @@ div.tocify {
 <div id="tesselations-point-in-polygon" class="section level2">
 <h2>3. Tesselations, Point-in-Polygon</h2>
 <ul>
-<li><a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-04.html" target="_blank">sourcecode</a></li>
+<li><i class="fas fa-desktop"></i> <a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-04.html" target="_blank">sourcecode</a></li>
 </ul>
 <div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
 <span>
@@ -460,7 +460,7 @@ div.tocify {
 <div id="raster-and-remote-sensing" class="section level2">
 <h2>4. Raster and Remote Sensing</h2>
 <ul>
-<li><a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-05.html" target="_blank">sourcecode</a></li>
+<li><i class="fas fa-desktop"></i> <a href="https://jiwonbaik96.github.io/geog-13-labs/docs/lab-05.html" target="_blank">sourcecode</a></li>
 </ul>
 <div class="warning" style="padding:0.5em; background-color:#DAF2D3; color:#478432">
 <span>
